--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -39,7 +39,11 @@
 
 <body>
     <div id="app">
-        Loading...
+        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -52,9 +56,8 @@
     <script src="lib/tempusdominus/js/moment.min.js"></script>
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
+    <script src="js/main.js"></script>
+
 </body>
 
 
