--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -24,7 +24,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600;700&amp;family=Ubuntu:wght@400;500&amp;display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
+    <base href="/" />
 
 
     <link href="lib/animate/animate.min.css" rel="stylesheet">
